openAPI specs were updated
